# amalitechcicdlab

./: .env.example  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  main.yml
config/: generator.toml
config/email/: html_content_template.html  subject_template.j2
dags/: sales_pipeline.py
dags/generators/: sales_generator.py
init-db/: 01-create-target-db.sh  02-create-sales-table.sql
