[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amalitech-airflow-project"
version = "0.1.0"
description = "Amalitech CI/CD Lab Airflow Environment"
requires-python = ">=3.8"

dependencies = [
    "apache-airflow-providers-celery",
    "apache-airflow-providers-fab",
    "apache-airflow-providers-postgres",
    "apache-airflow-providers-amazon",
    "apache-airflow-providers-redis",
    "apache-airflow-providers-smtp",
    "apache-airflow-providers-sendgrid",
    "pandas>=2.0.0",
    "faker>=19.0.0",
]

[tool.setuptools]
packages = []
